name:               mml
version:            0.1.0
synopsis:           Haskell implementation of the Macroing Markup Language.
-- description:
homepage:           http://github.com/michael-olney/mml
license:            BSD2
license-file:       LICENSE
author:             Michael Olney <michael@spectralforms.com>
maintainer:         Michael Olney <michael@spectralforms.com>
category:           Web
build-type:         Simple
cabal-version:      >=1.10
executable          mml
  main-is:          Main.hs
  other-modules:
  other-extensions: GADTs, ScopedTypeVariables, FlexibleContexts, TupleSections

  build-depends:    base >=4.9 && <4.10, containers >=0.5, binary >= 0.8,
                    bytestring >= 0.10, utf8-string >= 1.0, pretty >= 1.1,
                    parsec >= 3.1, extra >= 1.5, strict >= 0.3, filepath >= 1.4,
                    process-extras >= 0.7

  default-language: Haskell2010

Test-Suite          test-mml
  type:             exitcode-stdio-1.0
  main-is:          MML/Test.hs

  build-depends:    base >=4.9 && <4.10, containers >=0.5, binary >= 0.8,
                    bytestring >= 0.10, utf8-string >= 1.0, pretty >= 1.1,
                    parsec >= 3.1
  build-depends:    HUnit

  default-language: Haskell2010

library
  build-depends:    base >=4.9 && <4.10, containers >=0.5, binary >= 0.8, bytestring >= 0.10, utf8-string >= 1.0, process-extras >= 0.7, pretty >= 1.1, parsec >= 3.1, extra >= 1.5, strict >= 0.3, filepath >= 1.4
  exposed-modules:  MML, MML.Types, MML.Binary, MML.Scripting, MML.Parse, MML.Unparse, MML.Eval, MML.HTML, MML.Funs

  default-language: Haskell2010

executable          mml-helloworld
  main-is:          HelloWorld.hs
  other-modules:
  other-extensions: GADTs, ScopedTypeVariables, FlexibleContexts, TupleSections

  build-depends:    base >=4.9 && <4.10, containers >= 0.5, binary >= 0.8, bytestring >= 0.10, utf8-string >= 1.0, process-extras >= 0.7

  default-language: Haskell2010
