name:               mml
version:            0.3.0
synopsis:           Haskell implementation of the Minimal Markup Language.
-- description:
homepage:           http://github.com/michael-olney/mml
license:            BSD2
license-file:       LICENSE
author:             Michael Olney <michael@spectralforms.com>
maintainer:         Michael Olney <michael@spectralforms.com>
category:           Web
build-type:         Simple
cabal-version:      >=1.10

executable          mml
  main-is:          Main.hs
  build-depends:    base >=4.9 && <4.10, containers >=0.5, binary >= 0.8,
                    bytestring >= 0.10, utf8-string >= 1.0, pretty >= 1.1,
                    parsec >= 3.1, extra >= 1.5, strict >= 0.3, filepath >= 1.4,
                    process-extras >= 0.7, aeson >= 1.2,
                    unordered-containers >= 0.2, text >= 1.2, vector >= 0.11,
                    optparse-applicative >= 0.14,
                    scientific >= 0.3,
                    syb >= 0.6, deepseq >= 1.4, either >= 4.4, transformers >= 0.5,
                    blaze-html >= 0.9, blaze-markup >= 0.8
  default-language: Haskell2010

Test-Suite          test-mml
  type:             exitcode-stdio-1.0
  main-is:          MML/Test.hs
  build-depends:    base >=4.9 && <4.10, containers >=0.5, binary >= 0.8,
                    bytestring >= 0.10, utf8-string >= 1.0, pretty >= 1.1,
                    parsec >= 3.1, extra >= 1.5, strict >= 0.3, filepath >= 1.4,
                    process-extras >= 0.7, aeson >= 1.2,
                    unordered-containers >= 0.2, text >= 1.2, vector >= 0.11,
                    scientific >= 0.3,
                    syb >= 0.6, deepseq >= 1.4, either >= 4.4, transformers >= 0.5,
                    blaze-html >= 0.9, blaze-markup >= 0.8
  default-language: Haskell2010
  build-depends:    HUnit
  default-language: Haskell2010

library
  build-depends:    base >=4.9 && <4.10, containers >=0.5, binary >= 0.8,
                    bytestring >= 0.10, utf8-string >= 1.0, pretty >= 1.1,
                    parsec >= 3.1, extra >= 1.5, strict >= 0.3, filepath >= 1.4,
                    process-extras >= 0.7, aeson >= 1.2,
                    unordered-containers >= 0.2, text >= 1.2, vector >= 0.11,
                    scientific >= 0.3,
                    syb >= 0.6, deepseq >= 1.4, either >= 4.4, transformers >= 0.5,
                    blaze-html >= 0.9, blaze-markup >= 0.8
  exposed-modules:  MML, MML.Types,
                    MML.Parse, MML.Unparse,
                    MML.Format.HTML, MML.Format.JSON, MML.Format.MML
  default-language: Haskell2010

